test/visibility/import/edgeCases/multipleDef2.good
multipleDef2.chpl:7: error: 'x' has multiple definitions in this scope
multipleDef2.chpl:8: note: it was first defined through the 'import' statement here
multipleDef2.chpl:2: note: leading to the definition here
multipleDef2.chpl:9: note: redefined through the 'import' statement here
multipleDef2.chpl:5: note: leading to the definition here
